--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path_provider: 2.0.9
   hive: 2.0.6
   flutter_datetime_picker: 1.5.1
+  share_plus: 4.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
